--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <!-- Links CSS-->
-  <link rel="stylesheet" href="/assets/css/reset.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="logo">
+      <a href="#">Pedro Leite <i class="fa-solid fa-chess-knight"></i></a>
+    </div>
+    <div class="menu">
+      <button>
+        <i class="fa-solid fa-bars"></i>
+      </button>
+    </div>
+  </header>
 </body>
 </html>
