feat: home section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>Pedro Leite</title>
 
   <!-- Links Fonts-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <!-- Links CSS-->
   <link rel="stylesheet" href="./assets/css/reset.css">
@@ -26,5 +24,26 @@
       </button>
     </div>
   </header>
+  <section class="home">
+    <div class="perfil">
+      <img src="/assets/images/perfil.png" alt="foto de perfil" srcset="">
+    </div>
+    <div class="home-content">
+      <div class="title">
+        <h1>Olá, meu nome é Pedro Leite e eu sou um Desenvolvedor Front-end</h1>
+      </div>
+      <div class="home-paragraph">
+        <p>Eu estou cursando sistemas de informação na Universidade Anhembi Morumbi e atualmente estou participando no projeto Oracle ONE na Alura.</p>
+      </div>
+    </div>
+    <div class="links-list">
+      <ul>
+        <li><a href="#">Github <img src="/assets/images/arrow.png" alt="arrow"></a></li>
+        <li><a href="#">Linkedin <img src="/assets/images/arrow.png" alt="arrow"></a></li>
+        <li><a href="#">Instagram <img src="/assets/images/arrow.png" alt="arrow"></a></li>
+        <li><a href="#">Curriculo <img src="/assets/images/arrow.png" alt="arrow"></a></li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
