feat: section about me

--- a/index.html
+++ b/index.html
@@ -45,5 +45,11 @@
       </ul>
     </div>
   </section>
+
+  <section class="aboutMe">
+    <h2>Sobre mim</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia laboriosam iusto id laborum vitae, voluptatem perspiciatis tenetur quo placeat eveniet atque repudiandae? Nemo, natus excepturi molestias similique temporibus repellat fuga.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas perspiciatis natus incidunt beatae dolor, ad ratione, temporibus sapiente adipisci perferendis rem voluptates suscipit, numquam quia tenetur rerum excepturi officiis?</p>
+  </section>
 </body>
 </html>
