--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
   <section class="home">
     <div class="perfil">
-      <img src="/assets/images/perfil.png" alt="foto de perfil" srcset="">
+      <img src="/assets/images/perfil.jpg" alt="foto de perfil" srcset="">
     </div>
     <div class="home-content">
       <div class="title">
@@ -46,10 +46,43 @@
     </div>
   </section>
 
+  <!-- about me section -->
   <section class="aboutMe">
     <h2>Sobre mim</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia laboriosam iusto id laborum vitae, voluptatem perspiciatis tenetur quo placeat eveniet atque repudiandae? Nemo, natus excepturi molestias similique temporibus repellat fuga.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas perspiciatis natus incidunt beatae dolor, ad ratione, temporibus sapiente adipisci perferendis rem voluptates suscipit, numquam quia tenetur rerum excepturi officiis?</p>
   </section>
+  <!-- skills section -->
+  <section>
+    <div class="title-cards">
+      <h2>Skills</h2>
+    </div>
+    <div class="boxes">
+      <div class="box">
+        <i class="fa-brands fa-html5 icon"></i>
+        <p>HTML 5</p>
+      </div>
+      <div class="box">
+        <i class="fa-brands fa-square-js icon"></i>
+        <p>Javascript</p>
+      </div>
+      <div class="box">
+        <i class="fa-brands fa-css3-alt icon"></i>
+        <p>CSS 3</p>
+      </div>
+      <div class="box">
+        <i class="fa-brands fa-node icon"></i>
+        <p>Node JS</p>
+      </div>
+      <div class="box">
+        <i class="fa-brands fa-java icon"></i>
+        <p>Java</p>
+      </div>
+      <div class="box">
+        <i class="fa-brands fa-git-alt icon"></i>
+        <p>Git</p>
+      </div>
+    </div>
+
 </body>
 </html>
