--- a/index.html
+++ b/index.html
@@ -84,5 +84,37 @@
       </div>
     </div>
 
+  <!-- Hobbies section -->
+  <section>
+    <div class="title-cards">
+      <h2>Hobbies</h2>
+    </div>
+    <div class="boxes">
+      <div class="box">
+        <i class="fa-solid fa-chess icon"></i>
+        <p>Jogar xadrez</p>
+      </div>
+      <div class="box">
+        <i class="fa-solid fa-headphones-simple icon"></i>
+        <p>Ouvir música</p>
+      </div>
+      <div class="box">
+        <i class="fa-brands fa-css3-alt icon"></i>
+        <p>Assistir séries</p>
+      </div>
+      <div class="box">
+        <i class="fa-solid fa-gamepad icon"></i>
+        <p>Jogar Video Game</p>
+      </div>
+      <div class="box">
+        <i class="fa-solid fa-book icon"></i>
+        <p>Ler</p>
+      </div>
+      <div class="box">
+        <i class="fa-solid fa-keyboard icon"></i>
+        <p>Programar</p>
+      </div>
+    </div>
+
 </body>
 </html>
