feat: graduation and professional xp

--- a/index.html
+++ b/index.html
@@ -115,6 +115,38 @@
         <p>Programar</p>
       </div>
     </div>
+  
+  <section class="graduation">
+    <div class="title-cards">
+      <h2>Formação Acadêmica</h2>
+    </div>
+    <div class="box-large">
+      <div class="box-large-img">
+        <img src="./assets/images/logo-anhembi.png" alt="" srcset="">
+      </div>
+      <p class="box-large-title">Sistemas da Informação</p>
+      <p>Em andamento - UAM</p>
+    </div>
+  </section>
 
+  <!-- Experiência profissional -->
+  <section>
+    <div class="title-cards">
+      <h2>Experiência profissional</h2>
+    </div>
+    <div class="boxes">
+      <div class="box-large">
+        <div class="box-large-img">
+          <img src="./assets/images/decoder.png" alt="site decoder challenge feito por mim">
+        </div>
+        <p class="box-large-title">Decodificador de texto</p>
+        <p>Challenge Alura Codificador</p>
+        <ul>
+          <li><button class="button-secundary">Repositório</button></li>
+          <li><button class="button-primary">Ver Demo</button></li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
