feat: form contact

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <!-- Links Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
   <!-- Links CSS-->
-  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="/assets/css/reset.css">
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
@@ -147,6 +148,21 @@
         </ul>
       </div>
     </div>
+  </section>
+  <!-- Form -->
+  <section class="form">
+    <h2>Contato</h2>
+    <p>Quer entrar em contato comigo? Preencha o formulário e entrarei em contato o mais rápido possível</p>
+    <form>
+      <label for="name">nome:</label>
+      <input type="text" name="name" id="name">
+      <label for="email">email:</label>
+      <input type="email" name="email" id="name">
+      <label for="topic">Assunto:</label>
+      <input type="text" name="title" id="topic">
+      <textarea name="" id="" cols="30" rows="6" placeholder="mensagem"></textarea>
+      <button class="button-primary">Enviar mensagem</button>
+    </form>
   </section>
 </body>
 </html>
