--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <!-- Links Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
   <!-- Links CSS-->
-  <link rel="stylesheet" href="/assets/css/reset.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <header class="header">
@@ -173,5 +173,8 @@
       <button class="button-primary">Enviar mensagem</button>
     </form>
   </section>
+  <footer>
+    <p>Desenvolvido por Pedro Leite</p>
+  </footer>
 </body>
 </html>
