fix: css github pages problem

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <!-- Links Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
   <!-- Links CSS-->
-  <link rel="stylesheet" href="/assets/css/reset.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <header class="header">
@@ -27,7 +27,7 @@
   </header>
   <section class="home">
     <div class="perfil">
-      <img src="/assets/images/perfil.jpg" alt="foto de perfil" srcset="">
+      <img src="./assets/images/perfil.jpg" alt="foto de perfil" srcset="">
     </div>
     <div class="home-content">
       <div class="title">
@@ -39,10 +39,10 @@
     </div>
     <div class="links-list">
       <ul>
-        <li><a href="#">Github <img src="/assets/images/arrow.png" alt="arrow"></a></li>
-        <li><a href="#">Linkedin <img src="/assets/images/arrow.png" alt="arrow"></a></li>
-        <li><a href="#">Instagram <img src="/assets/images/arrow.png" alt="arrow"></a></li>
-        <li><a href="#">Curriculo <img src="/assets/images/arrow.png" alt="arrow"></a></li>
+        <li><a href="#">Github <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+        <li><a href="#">Linkedin <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+        <li><a href="#">Instagram <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+        <li><a href="#">Curriculo <img src="./assets/images/arrow.png" alt="arrow"></a></li>
       </ul>
     </div>
   </section>
@@ -173,5 +173,8 @@
       <button class="button-primary">Enviar mensagem</button>
     </form>
   </section>
+  <footer>
+    <p>Desenvolvido por Pedro Leite</p>
+  </footer>
 </body>
 </html>
