feat: footer done.

--- a/index.html
+++ b/index.html
@@ -157,23 +157,21 @@
       <div class="input-container">
         <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required>
         <label class="input-label" for="nome">Nome</label>
-        <!-- <span class="input-mensagem-erro">Este campo não está válido</span> -->
       </div>
       <div class="input-container">
         <input name="email" id="email" class="input" type="email" placeholder="Email" required>
         <label class="input-label" for="email">Email</label>
-        <!-- <span class="input-mensagem-erro">Este campo não está válido</span> -->
       </div>
       <div class="input-container">
         <input name="topic" id="topic" class="input" type="text" placeholder="Assunto" required>
         <label class="input-label" for="topic">Assunto</label>
-        <!-- <span class="input-mensagem-erro">Este campo não está válido</span> -->
       </div>
       <textarea name="" id="" cols="30" rows="6" placeholder="mensagem"></textarea>
       <button class="button-primary">Enviar mensagem</button>
     </form>
   </section>
-  <footer>
+  <!-- footer -->
+  <footer class="footer">
     <p>Desenvolvido por Pedro Leite</p>
   </footer>
 </body>
