--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
       <a href="#">Pedro Leite <i class="fa-solid fa-chess-knight"></i></a>
     </div>
     <div class="menu">
+      <nav>
+        <ul>
+          <li><a href="#">Sobre mim</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Hobbies</a></li>
+          <li><a href="#">Formação</a></li>
+          <li><a href="#">Projetos</a></li>
+        </ul>
+      </nav>
       <button>
         <i class="fa-solid fa-bars"></i>
       </button>
