--- a/index.html
+++ b/index.html
@@ -15,173 +15,175 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="logo">
-      <a href="#">Pedro Leite <i class="fa-solid fa-chess-knight"></i></a>
-    </div>
-    <div class="menu">
-      <nav>
+  <main>
+    <header class="header">
+      <div class="logo">
+        <a href="#">Pedro Leite <i class="fa-solid fa-chess-knight"></i></a>
+      </div>
+      <div class="menu">
+        <nav>
+          <ul>
+            <li><a href="#">Sobre mim</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Hobbies</a></li>
+            <li><a href="#">Formação</a></li>
+            <li><a href="#">Projetos</a></li>
+          </ul>
+        </nav>
+        <button>
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </div>
+    </header>
+    <section class="home">
+      <div class="perfil">
+        <img src="./assets/images/perfil.jpg" alt="foto de perfil" srcset="">
+      </div>
+      <div class="home-content">
+        <div class="title">
+          <h1>Olá, meu nome é Pedro Leite e eu sou um Desenvolvedor Front-end</h1>
+        </div>
+        <div class="home-paragraph">
+          <p>Eu estou cursando sistemas de informação na Universidade Anhembi Morumbi e atualmente estou participando no projeto Oracle ONE na Alura.</p>
+        </div>
+      </div>
+      <div class="links-list">
         <ul>
-          <li><a href="#">Sobre mim</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Hobbies</a></li>
-          <li><a href="#">Formação</a></li>
-          <li><a href="#">Projetos</a></li>
+          <li><a href="#">Github <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+          <li><a href="#">Linkedin <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+          <li><a href="#">Instagram <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+          <li><a href="#">Curriculo <img src="./assets/images/arrow.png" alt="arrow"></a></li>
         </ul>
-      </nav>
-      <button>
-        <i class="fa-solid fa-bars"></i>
-      </button>
-    </div>
-  </header>
-  <section class="home">
-    <div class="perfil">
-      <img src="./assets/images/perfil.jpg" alt="foto de perfil" srcset="">
-    </div>
-    <div class="home-content">
-      <div class="title">
-        <h1>Olá, meu nome é Pedro Leite e eu sou um Desenvolvedor Front-end</h1>
       </div>
-      <div class="home-paragraph">
-        <p>Eu estou cursando sistemas de informação na Universidade Anhembi Morumbi e atualmente estou participando no projeto Oracle ONE na Alura.</p>
-      </div>
-    </div>
-    <div class="links-list">
-      <ul>
-        <li><a href="#">Github <img src="./assets/images/arrow.png" alt="arrow"></a></li>
-        <li><a href="#">Linkedin <img src="./assets/images/arrow.png" alt="arrow"></a></li>
-        <li><a href="#">Instagram <img src="./assets/images/arrow.png" alt="arrow"></a></li>
-        <li><a href="#">Curriculo <img src="./assets/images/arrow.png" alt="arrow"></a></li>
-      </ul>
-    </div>
-  </section>
+    </section>
 
-  <!-- about me section -->
-  <section class="aboutMe">
-    <h2>Sobre mim</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia laboriosam iusto id laborum vitae, voluptatem perspiciatis tenetur quo placeat eveniet atque repudiandae? Nemo, natus excepturi molestias similique temporibus repellat fuga.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas perspiciatis natus incidunt beatae dolor, ad ratione, temporibus sapiente adipisci perferendis rem voluptates suscipit, numquam quia tenetur rerum excepturi officiis?</p>
-  </section>
-  <!-- skills section -->
-  <section>
-    <div class="title-cards">
-      <h2>Skills</h2>
-    </div>
-    <div class="boxes">
-      <div class="box">
-        <i class="fa-brands fa-html5 icon"></i>
-        <p>HTML 5</p>
+    <!-- about me section -->
+    <section class="aboutMe">
+      <h2>Sobre mim</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia laboriosam iusto id laborum vitae, voluptatem perspiciatis tenetur quo placeat eveniet atque repudiandae? Nemo, natus excepturi molestias similique temporibus repellat fuga.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas perspiciatis natus incidunt beatae dolor, ad ratione, temporibus sapiente adipisci perferendis rem voluptates suscipit, numquam quia tenetur rerum excepturi officiis?</p>
+    </section>
+    <!-- skills section -->
+    <section>
+      <div class="title-cards">
+        <h2>Skills</h2>
       </div>
-      <div class="box">
-        <i class="fa-brands fa-square-js icon"></i>
-        <p>Javascript</p>
+      <div class="boxes">
+        <div class="box">
+          <i class="fa-brands fa-html5 icon"></i>
+          <p>HTML 5</p>
+        </div>
+        <div class="box">
+          <i class="fa-brands fa-square-js icon"></i>
+          <p>Javascript</p>
+        </div>
+        <div class="box">
+          <i class="fa-brands fa-css3-alt icon"></i>
+          <p>CSS 3</p>
+        </div>
+        <div class="box">
+          <i class="fa-brands fa-node icon"></i>
+          <p>Node JS</p>
+        </div>
+        <div class="box">
+          <i class="fa-brands fa-java icon"></i>
+          <p>Java</p>
+        </div>
+        <div class="box">
+          <i class="fa-brands fa-git-alt icon"></i>
+          <p>Git</p>
+        </div>
       </div>
-      <div class="box">
-        <i class="fa-brands fa-css3-alt icon"></i>
-        <p>CSS 3</p>
-      </div>
-      <div class="box">
-        <i class="fa-brands fa-node icon"></i>
-        <p>Node JS</p>
-      </div>
-      <div class="box">
-        <i class="fa-brands fa-java icon"></i>
-        <p>Java</p>
-      </div>
-      <div class="box">
-        <i class="fa-brands fa-git-alt icon"></i>
-        <p>Git</p>
-      </div>
-    </div>
 
-  <!-- Hobbies section -->
-  <section>
-    <div class="title-cards">
-      <h2>Hobbies</h2>
-    </div>
-    <div class="boxes">
-      <div class="box">
-        <i class="fa-solid fa-chess icon"></i>
-        <p>Jogar xadrez</p>
+    <!-- Hobbies section -->
+    <section>
+      <div class="title-cards">
+        <h2>Hobbies</h2>
       </div>
-      <div class="box">
-        <i class="fa-solid fa-headphones-simple icon"></i>
-        <p>Ouvir música</p>
+      <div class="boxes">
+        <div class="box">
+          <i class="fa-solid fa-chess icon"></i>
+          <p>Jogar xadrez</p>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-headphones-simple icon"></i>
+          <p>Ouvir música</p>
+        </div>
+        <div class="box">
+          <i class="fa-brands fa-css3-alt icon"></i>
+          <p>Assistir séries</p>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-gamepad icon"></i>
+          <p>Jogar Video Game</p>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-book icon"></i>
+          <p>Ler</p>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-keyboard icon"></i>
+          <p>Programar</p>
+        </div>
       </div>
-      <div class="box">
-        <i class="fa-brands fa-css3-alt icon"></i>
-        <p>Assistir séries</p>
+    
+    <section class="graduation">
+      <div class="title-cards">
+        <h2>Formação Acadêmica</h2>
       </div>
-      <div class="box">
-        <i class="fa-solid fa-gamepad icon"></i>
-        <p>Jogar Video Game</p>
-      </div>
-      <div class="box">
-        <i class="fa-solid fa-book icon"></i>
-        <p>Ler</p>
-      </div>
-      <div class="box">
-        <i class="fa-solid fa-keyboard icon"></i>
-        <p>Programar</p>
-      </div>
-    </div>
-  
-  <section class="graduation">
-    <div class="title-cards">
-      <h2>Formação Acadêmica</h2>
-    </div>
-    <div class="box-large">
-      <div class="box-large-img">
-        <img src="./assets/images/logo-anhembi.png" alt="" srcset="">
-      </div>
-      <p class="box-large-title">Sistemas da Informação</p>
-      <p>Em andamento - UAM</p>
-    </div>
-  </section>
-
-  <!-- Experiência profissional -->
-  <section class="professional-xp">
-    <div class="title-cards">
-      <h2>Experiência profissional</h2>
-    </div>
-    <div class="boxes">
       <div class="box-large">
         <div class="box-large-img">
-          <img src="./assets/images/decoder.png" alt="site decoder challenge feito por mim">
+          <img src="./assets/images/logo-anhembi.png" alt="university anhembi morumbi logo" srcset="">
         </div>
-        <p class="box-large-title">Decodificador de texto</p>
-        <p>Challenge Alura Codificador</p>
-        <ul>
-          <li><button class="button-secundary">Repositório</button></li>
-          <li><button class="button-primary">Ver Demo</button></li>
-        </ul>
+        <p class="box-large-title">Sistemas da Informação</p>
+        <p>Em andamento - UAM</p>
       </div>
-    </div>
-  </section>
-  <!-- Form -->
-  <section class="form">
-    <h2>Contato</h2>
-    <p>Quer entrar em contato comigo? Preencha o formulário e entrarei em contato o mais rápido possível</p>
-    <form>
-      <div class="input-container">
-        <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required>
-        <label class="input-label" for="nome">Nome</label>
+    </section>
+
+    <!-- Experiência profissional -->
+    <section class="professional-xp">
+      <div class="title-cards">
+        <h2>Experiência profissional</h2>
       </div>
-      <div class="input-container">
-        <input name="email" id="email" class="input" type="email" placeholder="Email" required>
-        <label class="input-label" for="email">Email</label>
+      <div class="boxes">
+        <div class="box-large">
+          <div class="box-large-img">
+            <img src="./assets/images/decoder.png" alt="site decoder challenge feito por mim">
+          </div>
+          <p class="box-large-title">Decodificador de texto</p>
+          <p>Challenge Alura Codificador</p>
+          <ul class="buttons">
+            <li><button class="button-secundary">Repositório</button></li>
+            <li><button class="button-primary">Ver Demo</button></li>
+          </ul>
+        </div>
       </div>
-      <div class="input-container">
-        <input name="topic" id="topic" class="input" type="text" placeholder="Assunto" required>
-        <label class="input-label" for="topic">Assunto</label>
-      </div>
-      <textarea name="" id="" cols="30" rows="6" placeholder="mensagem"></textarea>
-      <button class="button-primary">Enviar mensagem</button>
-    </form>
-  </section>
-  <!-- footer -->
-  <footer class="footer">
-    <p>Desenvolvido por Pedro Leite</p>
-  </footer>
+    </section>
+    <!-- Form -->
+    <section class="form">
+      <h2>Contato</h2>
+      <p>Quer entrar em contato comigo? Preencha o formulário e entrarei em contato o mais rápido possível</p>
+      <form>
+        <div class="input-container">
+          <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required>
+          <label class="input-label" for="nome">Nome</label>
+        </div>
+        <div class="input-container">
+          <input name="email" id="email" class="input" type="email" placeholder="Email" required>
+          <label class="input-label" for="email">Email</label>
+        </div>
+        <div class="input-container">
+          <input name="topic" id="topic" class="input" type="text" placeholder="Assunto" required>
+          <label class="input-label" for="topic">Assunto</label>
+        </div>
+        <textarea name="" id="" cols="30" rows="6" placeholder="mensagem"></textarea>
+        <button class="button-primary">Enviar mensagem</button>
+      </form>
+    </section>
+    <!-- footer -->
+    <footer class="footer">
+      <p>Desenvolvido por Pedro Leite</p>
+    </footer>
+  </main>
 </body>
 </html>
