feat: tablet size /2

--- a/index.html
+++ b/index.html
@@ -131,24 +131,24 @@
       <div class="title-cards">
         <h2>Formação Acadêmica</h2>
       </div>
-      <div class="box-large">
-        <div class="box-large-img">
+      <div class="box-medium">
+        <div class="box-medium-img">
           <img src="./assets/images/logo-anhembi.png" alt="university anhembi morumbi logo" srcset="">
         </div>
-        <p class="box-large-title">Sistemas da Informação</p>
+        <p class="box-medium-title">Sistemas da Informação</p>
         <p>Em andamento - UAM</p>
       </div>
     </section>
 
     <!-- Experiência profissional -->
-    <section class="professional-xp">
+    <section class="professional-xp max-width">
       <div class="title-cards">
         <h2>Experiência profissional</h2>
       </div>
       <div class="boxes">
         <div class="box-large">
           <div class="box-large-img">
-            <img src="./assets/images/decoder.png" alt="site decoder challenge feito por mim">
+            <img src="./assets/images/decoder-challenge.png" alt="site decoder challenge feito por mim">
           </div>
           <p class="box-large-title">Decodificador de texto</p>
           <p>Challenge Alura Codificador</p>
@@ -157,7 +157,17 @@
             <li><button class="button-primary">Ver Demo</button></li>
           </ul>
         </div>
-      </div>
+        <div class="box-large">
+          <div class="box-large-img">
+            <img src="./assets/images/coming-soon.png" alt="site decoder challenge feito por mim">
+          </div>
+          <p class="box-large-title">Em breve</p>
+          <p>Em breve</p>
+          <ul class="buttons">
+            <li><button class="button-secundary">Repositório</button></li>
+            <li><button class="button-primary">Ver Demo</button></li>
+          </ul>
+        </div>
     </section>
     <!-- Form -->
     <section class="form">
