feat: header and home section media size to desktop

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
 
     <!-- Experiência profissional -->
-    <section class="professional-xp max-width">
+    <section class="professional-xp">
       <div class="title-cards">
         <h2>Experiência profissional</h2>
       </div>
