feat: desktop media size done.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
 
     <!-- about me section -->
     <section class="aboutMe">
-      <h2>Sobre mim</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia laboriosam iusto id laborum vitae, voluptatem perspiciatis tenetur quo placeat eveniet atque repudiandae? Nemo, natus excepturi molestias similique temporibus repellat fuga.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas perspiciatis natus incidunt beatae dolor, ad ratione, temporibus sapiente adipisci perferendis rem voluptates suscipit, numquam quia tenetur rerum excepturi officiis?</p>
+      <div class="aboutme-content">
+        <h2>Sobre mim</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia laboriosam iusto id laborum vitae, voluptatem perspiciatis tenetur quo placeat eveniet atque repudiandae? Nemo, natus excepturi molestias similique temporibus repellat fuga.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas perspiciatis natus incidunt beatae dolor, ad ratione, temporibus sapiente adipisci perferendis rem voluptates suscipit, numquam quia tenetur rerum excepturi officiis?</p>
+      </div>
     </section>
     <!-- skills section -->
     <section>
@@ -131,12 +133,21 @@
       <div class="title-cards">
         <h2>Formação Acadêmica</h2>
       </div>
-      <div class="box-medium">
-        <div class="box-medium-img">
-          <img src="./assets/images/logo-anhembi.png" alt="university anhembi morumbi logo" srcset="">
+      <div class="boxes">
+        <div class="box-medium">
+          <div class="box-medium-img">
+            <img src="./assets/images/logo-anhembi.png" alt="university anhembi morumbi logo" srcset="">
+          </div>
+          <p class="box-medium-title">Sistemas da Informação</p>
+          <p>Em andamento - UAM</p>
         </div>
-        <p class="box-medium-title">Sistemas da Informação</p>
-        <p>Em andamento - UAM</p>
+        <div class="box-medium">
+          <div class="box-medium-img">
+            <img src="./assets/images/logo-anhembi.png" alt="" srcset="">
+          </div>
+          <p class="box-medium-title">Em breve</p>
+          <p>Em breve</p>
+        </div>
       </div>
     </section>
 
