fix: graduation section responsive

--- a/index.html
+++ b/index.html
@@ -133,20 +133,27 @@
       <div class="title-cards">
         <h2>Formação Acadêmica</h2>
       </div>
-      <div class="boxes">
+      <div class="boxes-medium">
         <div class="box-medium">
           <div class="box-medium-img">
-            <img src="./assets/images/logo-anhembi.png" alt="university anhembi morumbi logo" srcset="">
+            <img src="./assets/images/logo-anhembi.png" class="anhembi-logo" alt="university anhembi morumbi logo" srcset="">
           </div>
           <p class="box-medium-title">Sistemas da Informação</p>
           <p>Em andamento - UAM</p>
         </div>
         <div class="box-medium">
           <div class="box-medium-img">
-            <img src="./assets/images/logo-anhembi.png" alt="" srcset="">
+            <img src="./assets/images/logo-alura.png" class="alura-logo" alt="" srcset="">
           </div>
-          <p class="box-medium-title">Em breve</p>
-          <p>Em breve</p>
+          <p class="box-medium-title">Iniciante em Programação T3 - ONE</p>
+          <p>2022 - Alura e Oracle</p>
+        </div>
+        <div class="box-medium">
+          <div class="box-medium-img">
+            <img src="./assets/images/logo-alura.png" class="alura-logo" alt="" srcset="">
+          </div>
+          <p class="box-medium-title">Iniciante em Programação T3 - ONE</p>
+          <p>2022 - Alura e Oracle</p>
         </div>
       </div>
     </section>
