feat: back to top button

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <div class="menu">
         <nav>
           <ul>
-            <li><a href="#">Sobre mim</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Hobbies</a></li>
-            <li><a href="#">Formação</a></li>
-            <li><a href="#">Projetos</a></li>
+            <li><a href="#aboutMe">Sobre mim</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#hobbies">Hobbies</a></li>
+            <li><a href="#graduation">Formação</a></li>
+            <li><a href="#projects">Projetos</a></li>
           </ul>
         </nav>
         <button>
@@ -58,7 +58,7 @@
     </section>
 
     <!-- about me section -->
-    <section class="aboutMe">
+    <section class="aboutMe" id="aboutMe">
       <div class="aboutme-content">
         <h2>Sobre mim</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia laboriosam iusto id laborum vitae, voluptatem perspiciatis tenetur quo placeat eveniet atque repudiandae? Nemo, natus excepturi molestias similique temporibus repellat fuga.</p>
@@ -66,7 +66,7 @@
       </div>
     </section>
     <!-- skills section -->
-    <section>
+    <section id="skills">
       <div class="title-cards">
         <h2>Skills</h2>
       </div>
@@ -98,7 +98,7 @@
       </div>
 
     <!-- Hobbies section -->
-    <section>
+    <section id="hobbies">
       <div class="title-cards">
         <h2>Hobbies</h2>
       </div>
@@ -129,7 +129,7 @@
         </div>
       </div>
     
-    <section class="graduation">
+    <section id="graduation" class="graduation">
       <div class="title-cards">
         <h2>Formação Acadêmica</h2>
       </div>
@@ -159,7 +159,7 @@
     </section>
 
     <!-- Experiência profissional -->
-    <section class="professional-xp">
+    <section id="projects" class="professional-xp">
       <div class="title-cards">
         <h2>Experiência profissional</h2>
       </div>
@@ -212,6 +212,8 @@
     <footer class="footer">
       <p>Desenvolvido por Pedro Leite</p>
     </footer>
+
+    <a class="back-to-top"href="#">❯</a>
   </main>
 </body>
 </html>
