--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       </div>
       <div class="links-list">
         <ul>
-          <li><a href="#">Github <img src="./assets/images/arrow.png" alt="arrow"></a></li>
-          <li><a href="#">Linkedin <img src="./assets/images/arrow.png" alt="arrow"></a></li>
-          <li><a href="#">Instagram <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+          <li><a href="https://github.com/pedroleiteh/" target="_blank">Github <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+          <li><a href="https://www.linkedin.com/in/pedroleiteh/" target="_blank">Linkedin <img src="./assets/images/arrow.png" alt="arrow"></a></li>
+          <li><a href="https://www.instagram.com/pedroleiteh/" target="_blank">Instagram <img src="./assets/images/arrow.png" alt="arrow"></a></li>
           <li><a href="#">Curriculo <img src="./assets/images/arrow.png" alt="arrow"></a></li>
         </ul>
       </div>
