--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
   <!-- Links Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
+  <!-- favicon -->
   <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
+
   <!-- Links CSS-->
   <link rel="stylesheet" href="./assets/css/reset.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/global.css"> 
+  <link rel="stylesheet" href="./assets/css/partials/header.css">
+  <link rel="stylesheet" href="./assets/css/partials/home.css">
+  <link rel="stylesheet" href="./assets/css/partials/aboutMe.css">
+  <link rel="stylesheet" href="./assets/css/partials/skills.css">
+  <link rel="stylesheet" href="./assets/css/partials/graduation.css">
+  <link rel="stylesheet" href="./assets/css/partials/professional-xp.css">
+  <link rel="stylesheet" href="./assets/css/partials/form.css">
+  <link rel="stylesheet" href="./assets/css/partials/footer.css">
 </head>
 <body>
   <main>
@@ -169,21 +180,21 @@
             <img src="./assets/images/decoder-challenge.png" alt="site decoder challenge feito por mim">
           </div>
           <p class="box-large-title">Decodificador de texto</p>
-          <p>Challenge Alura Codificador</p>
+          <p>Challenge Alura Decodificador e codificador de textos</p>
           <ul class="buttons">
-            <li><button class="button-secundary">Repositório</button></li>
-            <li><button class="button-primary">Ver Demo</button></li>
+            <li><a href="https://github.com/pedroleiteh/decoder-alura-challenge" target="_blank"><button class="button-secundary">Repositório</button></a></li>
+            <li><a href="https://pedroleiteh.github.io/decoder-alura-challenge" target="_blank"><button class="button-primary">Ver Demo</button></a></li>
           </ul>
         </div>
         <div class="box-large">
           <div class="box-large-img">
-            <img src="./assets/images/coming-soon.png" alt="site decoder challenge feito por mim">
+            <img src="./assets/images/front-end-masters.png" alt="site decoder challenge feito por mim">
           </div>
-          <p class="box-large-title">Em breve</p>
-          <p>Em breve</p>
+          <p class="box-large-title">Projeto Front End Masters</p>
+          <p>Projeto de estudo HTML, CSS, de uma escola de front end fictícia</p>
           <ul class="buttons">
-            <li><button class="button-secundary">Repositório</button></li>
-            <li><button class="button-primary">Ver Demo</button></li>
+            <li><a href="https://github.com/pedroleiteh/FrontendMasters" target="_blank"><button class="button-secundary">Repositório</button></a></li>
+            <li><a href="https://pedroleiteh.github.io/FrontendMasters/" target="_blank"><button class="button-primary">Ver Demo</button></a></li>
           </ul>
         </div>
     </section>
@@ -204,8 +215,8 @@
           <input name="topic" id="topic" class="input" type="text" placeholder="Assunto" required>
           <label class="input-label" for="topic">Assunto</label>
         </div>
-        <textarea name="" id="" cols="30" rows="6" placeholder="mensagem"></textarea>
-        <button class="button-primary">Enviar mensagem</button>
+        <textarea cols="30" rows="6" placeholder="mensagem" disabled>Formulario não funcional no momento para entrar em contato enviar um e-mail para: contato.pedro77@gmail.com</textarea>
+        <button class="button-primary send-button" disabled>Enviar mensagem (Em breve)</button>
       </form>
     </section>
     <!-- footer -->
