feat: mobile hamburger button working

--- a/index.html
+++ b/index.html
@@ -31,20 +31,18 @@
       <div class="logo">
         <a href="#">Pedro Leite <i class="fa-solid fa-chess-knight"></i></a>
       </div>
-      <div class="menu">
-        <nav>
-          <ul>
-            <li><a href="#aboutMe">Sobre mim</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#hobbies">Hobbies</a></li>
-            <li><a href="#graduation">Formação</a></li>
-            <li><a href="#projects">Projetos</a></li>
-          </ul>
-        </nav>
-        <button>
+      <nav class="nav">
+        <ul>
+          <li><a href="#aboutMe" id="nav-link">Sobre mim</a></li>
+          <li><a href="#skills" id="nav-link">Skills</a></li>
+          <li><a href="#hobbies" id="nav-link">Hobbies</a></li>
+          <li><a href="#graduation" id="nav-link">Formação</a></li>
+          <li><a href="#projects" id="nav-link">Projetos</a></li>
+        </ul>
+        <button class="btn-mobile">
           <i class="fa-solid fa-bars"></i>
         </button>
-      </div>
+      </nav>
     </header>
     <section class="home">
       <div class="perfil">
@@ -226,5 +224,6 @@
 
     <a class="back-to-top"href="#">❯</a>
   </main>
+  <script src="./js/index.js"></script>
 </body>
 </html>
