feat: add a about me text.

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <section class="aboutMe" id="aboutMe">
       <div class="aboutme-content">
         <h2>Sobre mim</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia laboriosam iusto id laborum vitae, voluptatem perspiciatis tenetur quo placeat eveniet atque repudiandae? Nemo, natus excepturi molestias similique temporibus repellat fuga.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas perspiciatis natus incidunt beatae dolor, ad ratione, temporibus sapiente adipisci perferendis rem voluptates suscipit, numquam quia tenetur rerum excepturi officiis?</p>
+        <p>Meu nome é Pedro Leite, tenho 20 anos, e meu interesse por tecnologia começou aos 16 anos quando decidi que queria aprender a programar, pesquisando sobre encontrei o canal Curso em vídeo do professor Gustavo Guanabara onde eu vi o vídeo “Curso Python #01 - Seja um programador” posso falar facilmente que esse vídeo marcou minha vida já vi ele inúmeras vezes nele tem alguns trechos de pessoas Gabe Newell (cofundador da Valve), Drew Houston(fundador do Dropbox) e Mark Zuckerberg(cofundador do Facebook), sinceramente quando vi esse vídeo a única coisa que passou pela minha cabeça foi “eu quero aprender isso, quero ser que nem esses caras”.</p>
+        <p>Sou alguém simplesmente apaixonado por tecnologia e inovação e o futuro querendo ou não é a tecnologia, tenho experiência acadêmica em com desenvolvimento front-end utilizando HTML/CSS3, Javascript, Git, Github e desenvolvimento back-end utilizando Java e Spring. Procuro uma oportunidade como desenvolvedor front-end para aprender e ajudar a empresa na jornada pelo mundo da tecnologia.</p>
       </div>
     </section>
     <!-- skills section -->
@@ -161,7 +161,7 @@
           <div class="box-medium-img">
             <img src="./assets/images/logo-alura.png" class="alura-logo" alt="" srcset="">
           </div>
-          <p class="box-medium-title">Iniciante em Programação T3 - ONE</p>
+          <p class="box-medium-title">Front End T3 - ONE</p>
           <p>2022 - Alura e Oracle</p>
         </div>
       </div>
