fix: remove form section

--- a/index.html
+++ b/index.html
@@ -196,27 +196,7 @@
           </ul>
         </div>
     </section>
-    <!-- Form -->
-    <section class="form">
-      <h2>Contato</h2>
-      <p>Quer entrar em contato comigo? Preencha o formulário e entrarei em contato o mais rápido possível</p>
-      <form>
-        <div class="input-container">
-          <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required>
-          <label class="input-label" for="nome">Nome</label>
-        </div>
-        <div class="input-container">
-          <input name="email" id="email" class="input" type="email" placeholder="Email" required>
-          <label class="input-label" for="email">Email</label>
-        </div>
-        <div class="input-container">
-          <input name="topic" id="topic" class="input" type="text" placeholder="Assunto" required>
-          <label class="input-label" for="topic">Assunto</label>
-        </div>
-        <textarea cols="30" rows="6" placeholder="mensagem" disabled>Formulario não funcional no momento para entrar em contato enviar um e-mail para: contato.pedro77@gmail.com</textarea>
-        <button class="button-primary send-button" disabled>Enviar mensagem (Em breve)</button>
-      </form>
-    </section>
+    
     <!-- footer -->
     <footer class="footer">
       <p>Desenvolvido por Pedro Leite</p>
@@ -224,6 +204,6 @@
 
     <a class="back-to-top"href="#">❯</a>
   </main>
-  <script src="./js/index.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
 </html>
