--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <link rel="stylesheet" href="./assets/css/partials/skills.css">
   <link rel="stylesheet" href="./assets/css/partials/graduation.css">
   <link rel="stylesheet" href="./assets/css/partials/professional-xp.css">
-  <link rel="stylesheet" href="./assets/css/partials/form.css">
   <link rel="stylesheet" href="./assets/css/partials/footer.css">
   <link rel="stylesheet" href="./assets/css/partials/header.css">
 </head>
@@ -44,13 +43,14 @@
         </button>
       </nav>
     </header>
+    <!-- Home Section -->
     <section class="home">
       <div class="perfil">
-        <img src="./assets/images/perfil.jpg" alt="foto de perfil" srcset="">
+        <img src="./assets/images/perfil.jpg" alt="my profile photo" srcset="">
       </div>
       <div class="home-content">
         <div class="title">
-          <h1>Olá, meu nome é Pedro Leite e eu sou um Desenvolvedor Front-end</h1>
+          <h1>Olá, meu nome é Pedro Leite e eu sou um Desenvolvedor Java</h1>
         </div>
         <div class="home-paragraph">
           <p>Eu estou cursando sistemas de informação na Universidade Anhembi Morumbi e atualmente estou participando no projeto Oracle ONE na Alura.</p>
@@ -70,8 +70,8 @@
     <section class="aboutMe" id="aboutMe">
       <div class="aboutme-content">
         <h2>Sobre mim</h2>
-        <p>Meu nome é Pedro Leite, tenho 20 anos, e meu interesse por tecnologia começou aos 16 anos quando decidi que queria aprender a programar, pesquisando sobre encontrei o canal Curso em vídeo do professor Gustavo Guanabara onde eu vi o vídeo “Curso Python #01 - Seja um programador” posso falar facilmente que esse vídeo marcou minha vida já vi ele inúmeras vezes nele tem alguns trechos de pessoas Gabe Newell (cofundador da Valve), Drew Houston(fundador do Dropbox) e Mark Zuckerberg(cofundador do Facebook), sinceramente quando vi esse vídeo a única coisa que passou pela minha cabeça foi “eu quero aprender isso, quero ser que nem esses caras”.</p>
-        <p>Sou alguém simplesmente apaixonado por tecnologia e inovação e o futuro querendo ou não é a tecnologia, tenho experiência acadêmica em com desenvolvimento front-end utilizando HTML/CSS3, Javascript, Git, Github e desenvolvimento back-end utilizando Java e Spring. Procuro uma oportunidade como desenvolvedor front-end para aprender e ajudar a empresa na jornada pelo mundo da tecnologia.</p>
+        <p>Meu nome é Pedro Leite, tenho 20 anos, e meu interesse por tecnologia começou aos 16 anos quando decidi que queria aprender a programar, pesquisando sobre encontrei o canal Curso em vídeo do professor Gustavo Guanabara onde eu tive meu primeiro contato com programação com python mas nada muito significando na época, já hoje faço faculdade de Sistemas da Informação e sonho e pretendo me tornar um desenvolvedor.</p>
+        <p>Sou apaixonado por tecnologia e inovação, e o futuro querendo ou não é a tecnologia, tenho experiência acadêmica em desenvolvimento back-end utilizando Java e Spring. Procuro uma oportunidade como desenvolvedor júnior para colocar práticas meu conhecimentos adquiridos, quer saber um pouco mais?logo a baixo tem mais informações sobre as tecnologias que tenho conhecimento e alguns projetos em que coloquei em prática tais tecnologias</p>
       </div>
     </section>
     <!-- skills section -->
@@ -93,8 +93,7 @@
           <p>CSS 3</p>
         </div>
         <div class="box">
-          <i class="fa-brands fa-node icon"></i>
-          <p>Node JS</p>
+          <img src="./assets/images/logo-spring.png" class="spring-logo icon" alt="spring logo" srcset="">
         </div>
         <div class="box">
           <i class="fa-brands fa-java icon"></i>
@@ -104,37 +103,13 @@
           <i class="fa-brands fa-git-alt icon"></i>
           <p>Git</p>
         </div>
-      </div>
-
-    <!-- Hobbies section -->
-    <section id="hobbies">
-      <div class="title-cards">
-        <h2>Hobbies</h2>
-      </div>
-      <div class="boxes">
         <div class="box">
-          <i class="fa-solid fa-chess icon"></i>
-          <p>Jogar xadrez</p>
+          <i class="fa-solid fa-database icon"></i>
+          <p>MySQL</p>
         </div>
         <div class="box">
-          <i class="fa-solid fa-headphones-simple icon"></i>
-          <p>Ouvir música</p>
-        </div>
-        <div class="box">
-          <i class="fa-brands fa-css3-alt icon"></i>
-          <p>Assistir séries</p>
-        </div>
-        <div class="box">
-          <i class="fa-solid fa-gamepad icon"></i>
-          <p>Jogar Video Game</p>
-        </div>
-        <div class="box">
-          <i class="fa-solid fa-book icon"></i>
-          <p>Ler</p>
-        </div>
-        <div class="box">
-          <i class="fa-solid fa-keyboard icon"></i>
-          <p>Programar</p>
+          <i class="fa-solid fa-database icon"></i>
+          <p>MongoDB</p>
         </div>
       </div>
     
@@ -145,23 +120,30 @@
       <div class="boxes-medium">
         <div class="box-medium">
           <div class="box-medium-img">
-            <img src="./assets/images/logo-anhembi.png" class="anhembi-logo" alt="university anhembi morumbi logo" srcset="">
+            <img src="./assets/images/logo-anhembi.png" class="anhembi-logo" alt="university anhembi morumbi logo">
           </div>
           <p class="box-medium-title">Sistemas da Informação</p>
           <p>Em andamento - UAM</p>
         </div>
         <div class="box-medium">
           <div class="box-medium-img">
-            <img src="./assets/images/logo-alura.png" class="alura-logo" alt="" srcset="">
+            <img src="./assets/images/logo-alura.png" class="alura-logo" alt="alura logo">
           </div>
           <p class="box-medium-title">Iniciante em Programação T3 - ONE</p>
           <p>2022 - Alura e Oracle</p>
         </div>
         <div class="box-medium">
           <div class="box-medium-img">
-            <img src="./assets/images/logo-alura.png" class="alura-logo" alt="" srcset="">
+            <img src="./assets/images/logo-alura.png" class="alura-logo" alt="alura logo">
           </div>
-          <p class="box-medium-title">Front End T3 - ONE</p>
+          <p class="box-medium-title">Formação Front End T3 - ONE</p>
+          <p>2022 - Alura e Oracle</p>
+        </div>
+        <div class="box-medium">
+          <div class="box-medium-img">
+            <img src="./assets/images/logo-alura.png" class="alura-logo" alt="alura logo">
+          </div>
+          <p class="box-medium-title">Formação Java T3 - ONE</p>
           <p>2022 - Alura e Oracle</p>
         </div>
       </div>
@@ -196,7 +178,7 @@
           </ul>
         </div>
     </section>
-    
+
     <!-- footer -->
     <footer class="footer">
       <p>Desenvolvido por Pedro Leite</p>
