feat: update skills section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <ul>
           <li><a href="#aboutMe" id="nav-link">Sobre mim</a></li>
           <li><a href="#skills" id="nav-link">Skills</a></li>
-          <li><a href="#hobbies" id="nav-link">Hobbies</a></li>
           <li><a href="#graduation" id="nav-link">Formação</a></li>
           <li><a href="#projects" id="nav-link">Projetos</a></li>
         </ul>
@@ -93,7 +92,12 @@
           <p>CSS 3</p>
         </div>
         <div class="box">
-          <img src="./assets/images/logo-spring.png" class="spring-logo icon" alt="spring logo" srcset="">
+          <img src="./assets/images/logo-spring.png" class="skills-img" alt="spring logo">
+          <p>Spring Framework</p>
+        </div>
+        <div class="box">
+          <img src="./assets/images/logo-springboot.png" class="skills-img" alt="spring boot logo">
+          <p>Spring Boot</p>
         </div>
         <div class="box">
           <i class="fa-brands fa-java icon"></i>
@@ -161,6 +165,7 @@
           </div>
           <p class="box-large-title">Decodificador de texto</p>
           <p>Challenge Alura Decodificador e codificador de textos</p>
+          <p class="tools-this-project"><span>Tecnologias utilizadas</span>: HTML, CSS, Javascript.</p>
           <ul class="buttons">
             <li><a href="https://github.com/pedroleiteh/decoder-alura-challenge" target="_blank"><button class="button-secundary">Repositório</button></a></li>
             <li><a href="https://pedroleiteh.github.io/decoder-alura-challenge" target="_blank"><button class="button-primary">Ver Demo</button></a></li>
@@ -171,7 +176,8 @@
             <img src="./assets/images/front-end-masters.png" alt="site decoder challenge feito por mim">
           </div>
           <p class="box-large-title">Projeto Front End Masters</p>
-          <p>Projeto de estudo HTML, CSS, de uma escola de front end fictícia</p>
+          <p>Projeto de estudo de uma escola de front end fictícia</p>
+          <p class="tools-this-project"><span>Tecnologias utilizadas</span>: HTML, CSS.</p>
           <ul class="buttons">
             <li><a href="https://github.com/pedroleiteh/FrontendMasters" target="_blank"><button class="button-secundary">Repositório</button></a></li>
             <li><a href="https://pedroleiteh.github.io/FrontendMasters/" target="_blank"><button class="button-primary">Ver Demo</button></a></li>
